--- a/Blog.html
+++ b/Blog.html
@@ -4,6 +4,24 @@
 <title>Elijah Ratliff's Blog</title>
 </head>
 <body>
-<h1>Elijah Ratliff's Blog</h1>
+<h1>Elijah Ratliff<h1>
+<h2>Spider-Man</h2>
+<img src="spiderman.jpg">
+<img src="spiderman2.jpg">
+<img src="spiderman3.jpg">
+<img src="spiderman4.jpg">
+<img src="spiderman5.jpg">
+<img src="spiderman6.jpg">
+<img src="spiderman7.jpg">
+<img src="spiderman8.jpg">
+<img src="spiderman9.jpg">
+<img src="spiderman10.jpg">
+
+<h3 style="font-size:60px;">Movies</h3>
+<p>There have been many versions of the hero known as "Spider-Man". Three of the biggest interpretations of the charatcor are the movies.<br>
+There are Eight spiderman live action movies at this point in time. Spider-Man 1-3 directed by Sam Raimi, The Amazing Spider-Man 1-2 Directed<br>
+by Marc Webb, and The Mcu Movies directed by Jon Watts. The Spider-Man community is very divided on wich actor portraid the charactor best.<br>
+</p> 
+
 </body>
 </html>
