--- a/Blog.html
+++ b/Blog.html
@@ -22,6 +22,9 @@
 There are Eight spiderman live action movies at this point in time. Spider-Man 1-3 directed by Sam Raimi, The Amazing Spider-Man 1-2 Directed<br>
 by Marc Webb, and The Mcu Movies directed by Jon Watts. The Spider-Man community is very divided on wich actor portraid the charactor best.<br>
 </p> 
+  
+  <h3 style="font-size:60px;">Charactor</h3>
+  <p>Spider-Man AKA Peter Parker was a comic book charactor made by Stan Lee in 1962.
 
 </body>
 </html>
