--- a/Blog.html
+++ b/Blog.html
@@ -23,8 +23,11 @@ There are Eight spiderman live action movies at this point in time. Spider-Man 1
 by Marc Webb, and The Mcu Movies directed by Jon Watts. The Spider-Man community is very divided on wich actor portraid the charactor best.<br>
 </p> 
   
-  <h3 style="font-size:60px;">Charactor</h3>
-  <p>Spider-Man AKA Peter Parker was a comic book charactor made by Stan Lee in 1962.
+  <h4 style="font-size:60px;">Charactor</h4>
+  <p>Spider-Man AKA Peter Parker was a comic book charactor made by Stan Lee in 1962. The concept of the charactor was a highschool kid who gets bitten<br>
+    by a radioactive spider. He gains superhuman strength, speed, reflexes, durability, healing, spidersense, wall crawling, and many more. <br>
+    He faces many villains such as Green Goblin, Dock Ock, Sandman, Venom, Carnage, etc.
+    
 
 </body>
 </html>
