--- a/Blog.html
+++ b/Blog.html
@@ -28,6 +28,10 @@ by Marc Webb, and The Mcu Movies directed by Jon Watts. The Spider-Man community
     by a radioactive spider. He gains superhuman strength, speed, reflexes, durability, healing, spidersense, wall crawling, and many more. <br>
     He faces many villains such as Green Goblin, Dock Ock, Sandman, Venom, Carnage, etc.
     
-
+   <h5 style="font-size:60px;">Rating the spidermen</h5>
+    Andrew-10/10
+    Toby-9/10
+    Tom-8/10
+  
 </body>
 </html>
