--- a/Blog.html
+++ b/Blog.html
@@ -18,20 +18,37 @@
 <img src="spiderman10.jpg">
 
 <h3 style="font-size:60px;">Movies</h3>
-<p>There have been many versions of the hero known as "Spider-Man". Three of the biggest interpretations of the charatcor are the movies.<br>
+<p style="color:blue;">There have been many versions of the hero known as "Spider-Man". Three of the biggest interpretations of the charatcor are the movies.<br>
 There are Eight spiderman live action movies at this point in time. Spider-Man 1-3 directed by Sam Raimi, The Amazing Spider-Man 1-2 Directed<br>
 by Marc Webb, and The Mcu Movies directed by Jon Watts. The Spider-Man community is very divided on wich actor portraid the charactor best.<br>
 </p> 
   
   <h4 style="font-size:60px;">Charactor</h4>
-  <p>Spider-Man AKA Peter Parker was a comic book charactor made by Stan Lee in 1962. The concept of the charactor was a highschool kid who gets bitten<br>
+  <p style="color:red;">Spider-Man AKA Peter Parker was a comic book charactor made by Stan Lee in 1962. The concept of the charactor was a highschool kid who gets bitten<br>
     by a radioactive spider. He gains superhuman strength, speed, reflexes, durability, healing, spidersense, wall crawling, and many more. <br>
-    He faces many villains such as Green Goblin, Dock Ock, Sandman, Venom, Carnage, etc.
+    He faces many villains such as Green Goblin, Dock Ock, Sandman, Venom, Carnage, etc.</p>
     
-   <h5 style="font-size:60px;">Rating the spidermen</h5>
+   <h5 style="font-size:60px;">Rating the spider-men</h5>
     Andrew-10/10
     Toby-9/10
     Tom-8/10
+  
+  <p>&#128512;</p>
+  <p>&#128516;</p>
+  <p>&#128525;</p>
+  <p>&#128151;</p>
+  <p>&#128507;</p>
+  <p>&#128508;</p>
+  <p>&#128509;</p>
+  <p>&#128514;</p>
+  <p>&#128510;</p>
+  <p>&#128511;</p>
+  
+  <a href="https://en.wikipedia.org/wiki/Spider-Man">Spider-Man</a>
+  <a href="https://en.wikipedia.org/wiki/Andrew_Garfield">Andrew</a>
+  <a href="https://en.wikipedia.org/wiki/Tom_Holland">Tom</a>
+  <a href="https://en.wikipedia.org/wiki/Tobey_Maguire">Tobey</a>
+  <a href="https://en.wikipedia.org/wiki/Marvel_Comics">Marvel</a>
   
 </body>
 </html>
