--- a/Blog.html
+++ b/Blog.html
@@ -50,5 +50,35 @@ by Marc Webb, and The Mcu Movies directed by Jon Watts. The Spider-Man community
   <a href="https://en.wikipedia.org/wiki/Tobey_Maguire">Tobey</a>
   <a href="https://en.wikipedia.org/wiki/Marvel_Comics">Marvel</a>
   
+  <table style="width:100%">
+  <tr>
+    <th>Movies Ranked</th>
+  </tr>
+  <tr>
+    <td>Spider-Man: No Way Home</td>
+  </tr>
+  <tr>
+    <td>TASM 1</td>
+  </tr>
+  <tr>
+    <td>Spider-Man(2002)</td>
+  </tr>
+  <tr>
+    <td>Spider-Man: Homecoming</td>
+  </tr>
+  <tr>
+    <td>Spider-Man 2</td>
+  </tr>
+  <tr>
+    <td>TASM 2</td>
+  </tr>
+  <tr>
+    <td>Spider-Man: Far From Home</td>
+  </tr>
+  <tr>
+    <td>Spider-Man 3</td>
+  </tr>
+</table>
+  
 </body>
 </html>
